--- a/1-BitJamGame/Assembly-CSharp.csproj
+++ b/1-BitJamGame/Assembly-CSharp.csproj
@@ -60,8 +60,10 @@
     <Analyzer Include="D:\dev\Unity\2022.3.47f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Weapons\Turrets\SentryAttack.cs" />
     <Compile Include="Assets\Scripts\Enemies\BasicEnemieScript.cs" />
     <Compile Include="Assets\Scripts\Weapons\Turrets\SentryPlacer.cs" />
+    <Compile Include="Assets\Scripts\Weapons\Bullet\bulletScript.cs" />
     <Compile Include="Assets\Scripts\Player\Movement\BasicPlayerMovement.cs" />
   </ItemGroup>
   <ItemGroup>
