--- a/1-BitJamGame/Assembly-CSharp.csproj
+++ b/1-BitJamGame/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\Weapons\Turrets\SentryPlacer.cs" />
     <Compile Include="Assets\Scripts\Weapons\Bullet\bulletScript.cs" />
     <Compile Include="Assets\Scripts\Player\Movement\BasicPlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemies\spawnEnemies.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
