--- a/1-BitJamGame/Assembly-CSharp.csproj
+++ b/1-BitJamGame/Assembly-CSharp.csproj
@@ -63,9 +63,11 @@
     <Compile Include="Assets\Scripts\Weapons\Turrets\SentryAttack.cs" />
     <Compile Include="Assets\Scripts\Enemies\BasicEnemieScript.cs" />
     <Compile Include="Assets\Scripts\Weapons\Turrets\SentryPlacer.cs" />
+    <Compile Include="Assets\Scripts\UI\LogicScript.cs" />
     <Compile Include="Assets\Scripts\Weapons\Bullet\bulletScript.cs" />
     <Compile Include="Assets\Scripts\Enemies\ScriptableEnemy\EnemyScriptableObject.cs" />
     <Compile Include="Assets\Scripts\Player\Movement\BasicPlayerMovement.cs" />
+    <Compile Include="Assets\Scripts\Enemies\CleanOffScrean.cs" />
     <Compile Include="Assets\Scripts\Enemies\spawnEnemies.cs" />
   </ItemGroup>
   <ItemGroup>
