--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ Assets/AssetStoreTools*
 1-BitJamGame/Logs/AssetImportWorker1.log
 1-BitJamGame/Logs/shadercompiler-AssetImportWorker0.log
 1-BitJamGame/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+1-BitJamGame/Assembly-CSharp.csproj
+1-BitJamGame/Logs/shadercompiler-UnityShaderCompiler.exe0.log
