--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ Assets/AssetStoreTools*
 1-BitJamGame/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 1-BitJamGame/Assembly-CSharp.csproj
 1-BitJamGame/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+1-BitJamGame/Logs/AssetImportWorker0.log
+1-BitJamGame/Logs/AssetImportWorker1.log
+1-BitJamGame/Logs/shadercompiler-AssetImportWorker0.log
+1-BitJamGame/UserSettings/Layouts/default-2022.dwlt
