--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Assets/AssetStoreTools*
 *.dwlt
 /1-BitJamGame/UserSettings
 /1-BitJamGame/UserSettings/Layouts
+1-BitJamGame/UserSettings/Layouts/default-2022.dwlt
