--- a/1-BitJamGame/Assembly-CSharp.csproj
+++ b/1-BitJamGame/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\UI\LogicScript.cs" />
     <Compile Include="Assets\Scripts\Weapons\Bullet\bulletScript.cs" />
     <Compile Include="Assets\Scripts\Enemies\ScriptableEnemy\EnemyScriptableObject.cs" />
+    <Compile Include="Assets\EnemyBulletScript.cs" />
     <Compile Include="Assets\Scripts\Player\Movement\BasicPlayerMovement.cs" />
     <Compile Include="Assets\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\Enemies\CleanOffScrean.cs" />
